pkg/ibmvpc/examples/out/explain_out/NACLQueryConnection2_all_vpcs_explain.txt
Connectivity explanation for protocol: TCP between vsi1-ky[10.240.10.4] and 161.26.0.0/16
There is no connection "protocol: TCP" between vsi1-ky[10.240.10.4] and Public Internet 161.26.0.0/16; connection blocked by egress
Egress:
~~~~~~~
security group sg1-ky allows connection with the following allow rules
	index: 0, direction: outbound, protocol: all, cidr: 0.0.0.0/0
network ACL acl1-ky blocks connection since there are no relevant allow rules
